[gd_scene load_steps=18 format=3 uid="uid://djr5d1o7ty1pb"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_t3m4y"]
[ext_resource type="FontFile" uid="uid://tfidmcqr0pyc" path="res://Fonts/04B_30__.TTF" id="2_e2jom"]
[ext_resource type="Texture2D" uid="uid://bk0d35uynjdf0" path="res://Sprites/ui/play_button/play1.png" id="2_pelw8"]
[ext_resource type="Texture2D" uid="uid://dyjq6qjujs360" path="res://Sprites/ui/background.menu.png" id="2_vq31a"]
[ext_resource type="Texture2D" uid="uid://bq3v5ru524rbl" path="res://Sprites/ui/play_button/play2.png" id="3_4q3gq"]
[ext_resource type="Texture2D" uid="uid://bhodw7npf1g6y" path="res://Sprites/ui/slider_arrow1.png" id="4_y7av3"]
[ext_resource type="Texture2D" uid="uid://cjj3egccqqq8n" path="res://Sprites/ui/slider_arrow2.png" id="5_2purr"]
[ext_resource type="FontFile" uid="uid://vcgm0lnssd1p" path="res://Fonts/Minecraft.ttf" id="5_xedxf"]
[ext_resource type="Texture2D" uid="uid://ctacfogb7cc55" path="res://Sprites/ui/slider.png" id="6_ycflg"]
[ext_resource type="Texture2D" uid="uid://dgrihy4smi343" path="res://Sprites/ui/slider_content.png" id="7_sdl70"]
[ext_resource type="Texture2D" uid="uid://bkietgb2ry3ph" path="res://Sprites/ui/test_button/test_button1.png" id="9_ogn2c"]
[ext_resource type="Texture2D" uid="uid://m0xdi4lxkdgr" path="res://Sprites/ui/test_button/test_button2.png" id="10_jqd43"]
[ext_resource type="AudioStream" uid="uid://c36t0yr3oinkm" path="res://Songs/Sounds/bell_ding.ogg" id="11_gyyiw"]
[ext_resource type="Script" path="res://Scripts/Background_game_title_panel.gd" id="13_y6xg5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2h87l"]
texture = ExtResource("6_ycflg")
texture_margin_left = 4.76837e-07
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hwrje"]
texture = ExtResource("7_sdl70")
expand_margin_right = 8.0
region_rect = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ynyd"]
texture = ExtResource("7_sdl70")
expand_margin_right = 8.0
region_rect = Rect2(0, 0, 16, 16)

[node name="Menu" type="Node2D"]
script = ExtResource("1_t3m4y")

[node name="MenuBackground" type="Sprite2D" parent="."]
position = Vector2(169, 48)
scale = Vector2(0.331, 0.331)
texture = ExtResource("2_vq31a")

[node name="StartButton" type="TextureButton" parent="."]
offset_left = 11.0
offset_top = 11.0
offset_right = 139.0
offset_bottom = 59.0
texture_normal = ExtResource("2_pelw8")
texture_pressed = ExtResource("2_pelw8")
texture_hover = ExtResource("3_4q3gq")

[node name="SoundLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 215.0
offset_top = 10.0
offset_right = 262.0
offset_bottom = 26.0
scale = Vector2(0.805, 0.805)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5_xedxf")
theme_override_font_sizes/font_size = 16
text = "Sound"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="."]
texture_filter = 1
offset_left = 256.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 24.0
theme_override_icons/grabber = ExtResource("4_y7av3")
theme_override_icons/grabber_highlight = ExtResource("5_2purr")
theme_override_styles/slider = SubResource("StyleBoxTexture_2h87l")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_hwrje")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_4ynyd")
max_value = 1.0
step = 0.05
value = 1.0

[node name="VolumeTestButton" type="TextureButton" parent="."]
offset_left = 260.0
offset_top = 25.0
offset_right = 308.0
offset_bottom = 43.0
texture_normal = ExtResource("9_ogn2c")
texture_pressed = ExtResource("9_ogn2c")
texture_hover = ExtResource("10_jqd43")

[node name="Bell" type="AudioStreamPlayer" parent="VolumeTestButton"]
stream = ExtResource("11_gyyiw")

[node name="TeamPanel" type="Panel" parent="."]
self_modulate = Color(0, 0, 0, 1)
offset_left = 12.0
offset_top = 65.0
offset_right = 172.0
offset_bottom = 138.0

[node name="TeamMemberContainer" type="BoxContainer" parent="TeamPanel"]
layout_mode = 0
offset_right = 216.0
offset_bottom = 97.0
scale = Vector2(0.79, 0.79)
theme_override_constants/separation = 0
vertical = true

[node name="Gabriel" type="Label" parent="TeamPanel/TeamMemberContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5_xedxf")
text = "Sprite Artist : Gabriel"

[node name="Johan" type="Label" parent="TeamPanel/TeamMemberContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5_xedxf")
text = "Sprite Artist : Johan"

[node name="Emilie" type="Label" parent="TeamPanel/TeamMemberContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5_xedxf")
text = "Sprite Artist : Emilie"

[node name="Lucas" type="Label" parent="TeamPanel/TeamMemberContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5_xedxf")
text = "UI Design : Lucas"

[node name="Amine" type="Label" parent="TeamPanel/TeamMemberContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5_xedxf")
text = "Music : Amine"

[node name="Timoth√©e" type="Label" parent="TeamPanel/TeamMemberContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5_xedxf")
text = "Programming : Timothee"

[node name="ControlsLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 6.0
offset_top = 161.0
offset_right = 144.0
offset_bottom = 177.0
scale = Vector2(0.855, 0.855)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5_xedxf")
theme_override_font_sizes/font_size = 16
text = "Controles: Fleches / ZQSD
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackgroundGameTitlePanel" type="Panel" parent="."]
offset_left = 175.0
offset_top = 67.0
offset_right = 321.0
offset_bottom = 93.0
script = ExtResource("13_y6xg5")

[node name="GameTitleLabel" type="Label" parent="BackgroundGameTitlePanel"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 145.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("2_e2jom")
theme_override_font_sizes/font_size = 20
text = "YETI JAM"

[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="VolumeTestButton" to="." method="_on_volume_test_button_pressed"]
